# robot_project

./: frames_2025-11-26_16.06.17.gv  frames_2025-11-26_16.52.02.gv  frames_2025-12-10_21.53.33.gv  my_graph.pgm  my_graph.yaml  my_map.pgm  my_map.yaml  my_map1.yaml
src/: frames_2025-11-24_22.26.48.gv
src/ekf_slam/: package.xml  setup.cfg  setup.py
src/ekf_slam/ekf_slam/: ekf_slam.py  map_draw.py  map_to_tf.py
src/maps/: my_map.pgm  my_map.yaml
src/my_robot_control/: package.xml  setup.py
src/my_robot_control/launch/: control.launch.py  load_map.launch.py
src/my_robot_control/maps/: my_map.yaml  my_map1.pgm  my_map1.yaml  package.xml
src/my_robot_control/my_robot_control/: A_star_implementation.py  my_robot_nav.py  vfh_alg_test.py  visualize_map.py
src/my_robot_kinematic/: package.xml  setup.cfg  setup.py
src/my_robot_kinematic/my_robot_kinematic/: gz_vel_encoder_fake.py  imu_filter.py  jointState_from_vel_encoder.py  odom_from_vel_encoder.py  odom_kf_xy_from_imu.py  odometry_ekf.py  odometry_kf.py  odometry_publisher.py  scanToCloud.py  state_estimate.py
src/my_robot_localization/: CMakeLists.txt  package.xml
src/my_robot_localization/config/: amcl_params.yaml  ekf.yaml  imu_filter.yaml  mapper_params_online_sync.yaml
src/my_robot_localization/launch/: ekf.launch.py  imu_filter.launch.py  online_sync_myrobot.launch.py
src/my_robot_model/: CMakeLists.txt  package.xml
src/my_robot_model/config/: bridge_config.yaml  ekf.yaml  mapper_params_online_async.yaml
src/my_robot_model/description/: camera.xacro  depth_camera.xacro  imu.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_control.xacro  robot_core.xacro
src/my_robot_model/launch/: gz_robot.launch.py  my_robot_desc.launch.py  test.launch.py
src/my_robot_model/rviz/: config.rviz
src/my_robot_model/scripts/: wheel_odom_publisher.py
src/my_robot_model/worlds/: my_world.sdf
src/my_robot_navigation/: CMakeLists.txt  package.xml
src/my_robot_navigation/config/: rosmaster_x3_nav2_default_params.yaml
src/odom_to_tf/: CMakeLists.txt  package.xml
src/odom_to_tf/config/: odom_to_tf.yaml
src/odom_to_tf/launch/: odom_to_tf.launch.py
src/odom_to_tf/src/: odom_to_tf.cpp
